--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta name="jacket.title" content="Sidecar" />
 		<meta name="jacket.author" content="Brett Terpstra" />
 		<meta name="jacket.url" content="http://brettterpstra.com" />
-		<meta name="jacket.version" content="1.3" />
+		<meta name="jacket.version" content="1.4" />
 		<meta name="jacket.bounds" content="300x1440" />
-		<meta name="jacket.variations" content="I have the blues so bad, It's not easy being green, White riot, Black power" />
-		<meta name="jacket.settings" content="!can_handle_track_title_visibility, !can_handle_cover_visibility" />
+		<meta name="jacket.variations" content="I have the blues so bad, It's not easy being green, White riot, Black power, Almost invisible" />
+
 
 		<link rel="stylesheet" type="text/css" href="index.css"  />
 		<script type="text/javascript">
@@ -19,7 +19,7 @@
 		Simplify.listenEvent(PMEvents.Ready, function(initial_state)
 		{
 			//This template jacket will fade in because of this line
-			$("body").animate({"opacity": ".95"},2000);
+			$("body").animate({"opacity": ".85"},2000);
 
 			// if (Simplify.playerState() == PMPlayerState.Stopped)
 			// {
@@ -30,21 +30,35 @@
 			// 	$('.progress span').css({top:0});
 			// }
 			$('.progress span').css({top:"100%"});
-
 			var updateProgress = function()
 			{
 				if (Simplify.playerState() == PMPlayerState.Playing || Simplify.playerState() == PMPlayerState.Paused)
 				{
 					Simplify.getTrackPlayedAmount(function(value)
 					{
-
-						$('.progress span').css({top:value*100 + "%"});
+						$('.progress span').css({top:(Math.round(value*100/0.01)*0.01).toString() + "%"});
 					});
 				}
-
 			}
 
 			updateProgress(), setInterval(updateProgress, 1000);
+
+			$(".jacket").click(function(ev){
+				ev.preventDefault();
+				if (ev.metaKey) {
+					var percentage = (ev.pageY - $(this).offset().top)/$(this).height();
+					Simplify.setTrackSeeking(Simplify.getTrackLength() * percentage);
+				} else {
+					Simplify.togglePlayback();
+				}
+			});
+
+			//Activating application on double click
+			$("body, html").dblclick(function()
+			{
+				Simplify.nextTrack();
+			});
+
 		});
 
 		//When variation changes, you can add/remove CSS-classes from body to keep track current variation
@@ -86,6 +100,15 @@
 			else
 			{
 				$("body").removeClass("black");
+			}
+
+			if (variation.indexOf("Almost invisible") != -1)
+			{
+				$("body").addClass("invisible");
+			}
+			else
+			{
+				$("body").removeClass("invisible");
 			}
 
 		});
@@ -140,17 +163,14 @@
 		//You can show controls over here, modify UI and so forth
 		Simplify.listenEvent(PMEvents.InactiveMouseEnter, function()
 		{
-
+			$("body").animate({"opacity": "1"},500);
 		});
 
 		Simplify.listenEvent(PMEvents.InactiveMouseExit, function()
 		{
-
+			$("body").animate({"opacity": ".85"},500);
 		});
 
-		$(window).click(function(){
-			Simplify.togglePlayback();
-		})
 		</script>
 	</head>
 	<body>
