--- a/com.brettterpstra.sidecar.jacket/index.html
+++ b/com.brettterpstra.sidecar.jacket/index.html
@@ -4,10 +4,10 @@
 		<meta name="jacket.title" content="Sidecar" />
 		<meta name="jacket.author" content="Brett Terpstra" />
 		<meta name="jacket.url" content="http://brettterpstra.com" />
-		<meta name="jacket.version" content="1.5" />
-		<meta name="jacket.bounds" content="298x1418" />
+		<meta name="jacket.version" content="2.0" />
+		<meta name="jacket.bounds" content="298x1418 at 0x0" />
 		<meta name="jacket.variations" content="Snozzberry, Easy being green, Absence of dark, Obsidious, Wallflower, Nightfall, Oddity, Superfuzz Bigmuff" />
-
+		<meta name="jacket.options" content="no-dragging" />
 
 		<link rel="stylesheet" type="text/css" href="index.css"  />
 		<script type="text/javascript">
@@ -20,7 +20,7 @@
 			var blurredThemes = [
 				["blowout", "rgba(255, 222, 41, .2)"],
 				["fadeaway", "rgba(0, 154, 228, .2)"],
-				["fuzz", "rgba(255,255,255,.2)"]
+				["fuzz", "rgba(255, 255, 255, .2)"]
 			], i = 0;
 
 			for (i;i<blurredThemes.length;i++) {
@@ -32,8 +32,10 @@
 		}
 
 		//When user changes jacket to yours, or Simplify starts with your jacket this event arrives
-		Simplify.listenEvent(PMEvents.Ready, function(initial_state)
+		Simplify.listen(Simplify.events.ready, function(initial_state)
 		{
+			var screensize = Simplify.getSystemScreenSize();
+			Simplify.setJacketFrame({"height" : screensize.height, "bottom" : 0, "left" : 0 });
 			//This template jacket will fade in because of this line
 			$('#message').text("").removeClass("show");
 			$("body").animate({"opacity": ".85"},2000);
@@ -49,7 +51,7 @@
 			$('.progress span').css({top:"100%"});
 			var updateProgress = function()
 			{
-				if (Simplify.playerState() == PMPlayerState.Playing || Simplify.playerState() == PMPlayerState.Paused)
+				if (Simplify.getPlayerState() == Simplify.playerState.isPlaying || Simplify.getPlayerState() == Simplify.playerState.isPaused)
 				{
 					Simplify.getTrackPlayedAmount(function(value)
 					{
@@ -91,7 +93,7 @@
 					var percentage = (ev.pageY - $(this).offset().top)/$(this).height();
 					Simplify.setTrackSeeking(Simplify.getTrackLength() * percentage);
 				} else {
-					Simplify.togglePlayback();
+					Simplify.playbackToggle();
 				}
 			});
 
@@ -99,13 +101,17 @@
 			$("body, html").dblclick(function()
 			{
 				$('#message').text("").removeClass("show");
-				Simplify.nextTrack();
+				Simplify.playbackNextTrack();
 			});
 
 		});
 
+		Simplify.listen(Simplify.events.newScreenResolution, function(new_res, old_res) {
+			Simplify.setJacketFrame({"height" : new_res.height, "bottom" : 0, "left" : 0 });s
+		});
+
 		//When variation changes, you can add/remove CSS-classes from body to keep track current variation
-		Simplify.listenEvent(PMEvents.VariationChange, function(variation)
+		Simplify.listen(Simplify.events.newVariation, function(variation)
 		{
 			/* EXAMPLE CODE. IT WORKS! */
 
@@ -184,14 +190,14 @@
 		});
 
 		//UI modifications on playback changes
-		Simplify.listenEvent(PMEvents.PlaybackStateChange, function(state)
+		Simplify.listen(Simplify.events.newPlaybackState, function(state)
 		{
-			if (state == PMPlayerState.Paused)
+			if (state == Simplify.playerState.isPaused)
 			{
 				$('body').addClass('paused');
 				showMessage('paused');
 			}
-			else if (state == PMPlayerState.Playing)
+			else if (state == Simplify.playerState.isPlaying)
 			{
 				$('body').removeClass('paused');
 				showMessage('playing');
@@ -204,7 +210,7 @@
 		});
 
 		//Track title arrived from Simplify
-		Simplify.listenEvent(PMEvents.TrackInformationChange, function(artist, title, album)
+		Simplify.listen(Simplify.events.newTrack, function(artist, title, album)
 		{
 			//Undefined attributes means stopped playback.
 			if (artist != undefined && title != undefined)
@@ -225,7 +231,7 @@
 		});
 
 		//Cover image arrives from Simplify!
-		Simplify.listenEvent(PMEvents.CoverChange, function(cover)
+		Simplify.listen(Simplify.events.newCover, function(cover)
 		{
 			if (cover == undefined)
 			{
@@ -234,12 +240,12 @@
 		});
 
 		//You can show controls over here, modify UI and so forth
-		Simplify.listenEvent(PMEvents.InactiveMouseEnter, function()
+		Simplify.listen(Simplify.events.backgroundMouseIn, function()
 		{
 			$("body").stop().animate({"opacity": ".95"},500);
 		});
 
-		Simplify.listenEvent(PMEvents.InactiveMouseExit, function()
+		Simplify.listen(Simplify.events.backgroundMouseOut, function()
 		{
 			$("body").stop().animate({"opacity": ".85"},500);
 		});
