--- a/com.brettterpstra.sidecar.jacket/index.html
+++ b/com.brettterpstra.sidecar.jacket/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
 	<head>
+		<meta name="jacket.uid" content="com.brettterpstra.sidecar" />
 		<meta name="jacket.title" content="Sidecar" />
 		<meta name="jacket.author" content="Brett Terpstra" />
 		<meta name="jacket.url" content="http://brettterpstra.com" />
-		<meta name="jacket.version" content="2.0" />
-		<meta name="jacket.bounds" content="298x1418 at 0x0" />
+		<meta name="jacket.version" content="2.1" />
+		<meta name="jacket.bounds" content="298x1418 at 1418x0" />
 		<meta name="jacket.variations" content="Snozzberry, Easy being green, Absence of dark, Obsidious, Wallflower, Nightfall, Oddity, Superfuzz Bigmuff" />
-		<meta name="jacket.options" content="no-dragging" />
+		<meta name="jacket.options" content="" />
 
 		<link rel="stylesheet" type="text/css" href="index.css"  />
 		<script type="text/javascript">
@@ -35,7 +36,7 @@
 		Simplify.listen(Simplify.events.ready, function(initial_state)
 		{
 			var screensize = Simplify.getSystemScreenSize();
-			Simplify.setJacketFrame({"height" : screensize.height, "bottom" : 0, "left" : 0 });
+			Simplify.setJacketFrame({"height" : screensize.height, "top" : 0, "left" : 0 });
 			//This template jacket will fade in because of this line
 			$('#message').text("").removeClass("show");
 			$("body").animate({"opacity": ".85"},2000);
