--- a/com.brettterpstra.sidecar.jacket/index.html
+++ b/com.brettterpstra.sidecar.jacket/index.html
@@ -4,7 +4,7 @@
 		<title>Sidecar</title>
 		<meta name="jacket.title" content="Sidecar" />
 		<meta name="jacket.author" content="Brett Terpstra" />
-		<meta name="jacket.url" content="http://brettterpstra.com" />
+		<meta name="jacket.url" content="http://brettterpstra.com/projects/sidecar" />
 		<meta name="jacket.uid" content="com.brettterpstra.sidecar" />
 		<meta name="jacket.version" content="3.0" />
 		<meta name="jacket.bounds" content="298x1418 at 0x0" />
